--- a/studio/templates/generators/app_renderer.html
+++ b/studio/templates/generators/app_renderer.html
@@ -12,6 +12,7 @@
 		<div id="popovers"></div>
 		<script>
 			window.csrf_token = "{{ csrf_token }}";
+			window.app_name = "{{ app_name }}";
 			window.app_route = "{{ app_route }}";
 			window.app_title = "{{ app_title }}";
 			window.app_pages = {{ app_pages|tojson }};
